test: repository unit testing

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,23 @@
 # server configuration
-#ENV=DEBUG
+ENV=
 #PORT=8080
 CONTEXT_TIMEOUT=1
+BASE_URL=localhost
+TIMEOUT_IN_MS=200
+
 
 # postgresql
-DB_USER=
-DB_HOST=
-DB_PASS=
-DB_NAME=
-DB_PORT=
+DB_USER=avtara
+# DB_HOST=host.docker.internal
+DB_HOST=localhost
+DB_PASS=avtara112
+DB_NAME=travairdb
+DB_PORT=5432
+
+#AMQP
+# AMQP_URI=amqp://guest:guest@rabbitmq:5672
+AMQP_URI=amqp://guest:guest@localhost:5672
 
 # jwt
-ACCESS_TOKEN_KEY=
-REFRESH_TOKEN_KEY=
-ACCESS_TOKEN_AGE=
+SECRET_TOKEN_KEY=kKodoKDOoknnJjSJdokdwao213kmdek
+JWT_TOKEN_AGE=24
