template: change template .env

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,20 @@
 # server configuration
-ENV=
-#PORT=8080
-CONTEXT_TIMEOUT=1
-BASE_URL=localhost
-TIMEOUT_IN_MS=200
-
+PORT=
+CONTEXT_TIMEOUT=
+BASE_URL=
+TIMEOUT_IN_MS=
 
 # postgresql
-DB_USER=avtara
-# DB_HOST=host.docker.internal
-DB_HOST=localhost
-DB_PASS=avtara112
-DB_NAME=travairdb
-DB_PORT=5432
+DB_USER=
+DB_HOST=
+DB_PASS=
+DB_NAME=
+DB_PORT=
+DB_NAME_TESTING=
 
 #AMQP
-# AMQP_URI=amqp://guest:guest@rabbitmq:5672
-AMQP_URI=amqp://guest:guest@localhost:5672
+AMQP_URI=
 
 # jwt
-SECRET_TOKEN_KEY=kKodoKDOoknnJjSJdokdwao213kmdek
-JWT_TOKEN_AGE=24
+SECRET_TOKEN_KEY==
+JWT_TOKEN_AGE=
